--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,8 @@
-<h1>Hola Mundo</h1>
+<main class="m-auto flex-grow flex flex-col min-h-screen">
+  <router-outlet />
+  <div class="flex-1 flex-grow"></div>
+  <app-footer />
+</main>
+
+
+
