--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,35 +1,3 @@
-<section class="flex flex-row gap-2 mt-2">
-    <input 
-        type="text" 
-        class="input 
-        input-bordered mr-2 w-56" 
-        placeholder="Buscar por capital" 
-        autofocus
-        #txtSearch
-        (keyup.enter)="onSearchByCapital(txtSearch.value)"
-    >
-    <button class="btn btn-primary" (click)="onSearchByCapital(txtSearch.value)">
-        Buscar
-    </button>
-</section>
+<country-search-input placeholder="Buscar por capital" />
 
-<section class="mt-5">
-    <table class="table table-md mt-2 w-full">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Ícono</th>
-                <th>Bandera</th>
-                <th>País</th>
-                <th>Capital</th>
-                <th>Población</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                
-            </tr>
-        </tbody>
-    </table>
-</section>
+<country-list />
