--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,3 +1,5 @@
-<country-search-input placeholder="Buscar por capital" />
+<country-search-input placeholder="Buscar por capital" 
+(value)="onSearchByCapital($event)"
+/>
 
-<country-list />
+<country-list [countries]="countries()"/>
