--- a/src/app/country/pages/by-country-page/by-country-page.html
+++ b/src/app/country/pages/by-country-page/by-country-page.html
@@ -1,3 +1,12 @@
-<country-search-input placeholder="Buscar por país" />
+<country-search-input placeholder="Buscar por país" 
+(value)="query.set($event)"
+/>
 
-<country-list [countries]="[]"/>
+@if(countryResource.error()) {
+  <div class="alert alert-error mt-3">
+    <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+    <span>{{ countryResource.error()?.message }}</span>
+  </div>
+} @if(countryResource.hasValue()) { 
+    <country-list [countries]="countryResource.value()!"/>   
+}
