--- a/src/app/country/pages/country-page/country-information/country-information/country-information.html
+++ b/src/app/country/pages/country-page/country-information/country-information/country-information.html
@@ -1,7 +1,101 @@
 <section class="mx-10">
-    <h1 class="text-2xl font-bold">{{ country().name }}</h1>
-    <div class="flex flex-col gap-2">
-        <p class="text-sm">Capital: {{ country().capital }}</p>
-        <p class="text-sm">Población: {{ country().population | number:'1.0-0':'en-US'}}</p>
-    </div>
+    <h1 class="text-2xl font-bold">{{ country().cca2 | uppercase | titlecase  }}</h1>
 </section>
+
+<section class="stats shadow">
+    <div class="stat">
+      <div class="stat-figure text-secondary">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="inline-block h-8 w-8 stroke-current"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+          ></path>
+        </svg>
+      </div>
+      <div class="stat-title">Población</div>
+      <div class="stat-value">{{ country().population | number:'1.0-0':'en-US'}}</div>
+      <div class="stat-desc">{{ currentYear() }}</div>
+    </div>
+  
+    <div class="stat">
+      <div class="stat-figure text-secondary">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="inline-block h-8 w-8 stroke-current"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
+          ></path>
+        </svg>
+      </div>
+      <div class="stat-title">Nombre</div>
+      <div class="stat-value">{{country().name}}</div>
+      <div class="stat-desc">{{country().region}}</div>
+    </div>
+  
+    <div class="stat">
+      <div class="stat-figure text-secondary">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="inline-block h-8 w-8 stroke-current"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
+          ></path>
+        </svg>
+      </div>
+      <div class="stat-title">Subregión</div>
+      <div class="stat-value">{{country().subregion}}</div>
+      <div class="stat-desc">Idioma: {{country().languages.join(', ')}}</div>
+    </div>
+
+    <div class="stat">
+        <div class="stat-figure text-secondary">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            class="inline-block h-8 w-8 stroke-current"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
+            ></path>
+          </svg>
+        </div>
+        <div class="stat-title">Bandera</div>
+        <div class="stat-value">{{country().flag}}</div>
+        <div class="stat-desc">Capital: {{country().capital }}</div>
+      </div>
+
+</section>
+
+<figure class="diff aspect-16/9" tabindex="0">
+    <div class="diff-item-1" role="img" tabindex="0">
+      <img [alt]="country().name" [src]="country().flagSvg" />
+    </div>
+    <div class="diff-item-2" role="img">
+      <img class="blur brightness-75"
+      [alt]="country().name" [src]="country().flagSvg" />
+    </div>
+    <div class="diff-resizer"></div>
+  </figure>
